# launcher-legacy

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  README.md  biome.json  bun.lockb  lint-staged.config.js  package.json  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
app/: root.tsx  tailwind.css
app/components/: account-select.tsx  command-palette.tsx  friends.tsx  launcher-card.tsx  news-feed.tsx  send-message.tsx  skin-viewer.tsx
app/components/icons/: microsoft.tsx
app/components/layout/: index.ts  title-bar.tsx
app/components/layout/menus/: index.tsx  notifications.tsx  theme-toggle.tsx
app/components/layout/window/: title-bar.tsx
app/components/layout/window/menus/: index.tsx  notifications.tsx  theme-toggle.tsx
app/components/settings/: advanced.tsx  index.ts  launcher.tsx  notifications.tsx  preferences.tsx  resources.tsx
app/components/ui/: breadcrumb.tsx  card.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  sonner.tsx  tooltip.tsx
app/hooks/: async-effect.ts  debounce.ts  handle.ts  local-storage.ts  mounted.ts  os-type.ts  player-texture.ts  session-storage.ts  storage.ts
app/lib/: tauri.ts  utils.ts  web-api.ts
app/lib/constants/: settings.tsx
app/lib/providers/: account.tsx  index.tsx  launcher-layout.tsx  layout.tsx  settings-provider.tsx  settings.tsx  theme-provider.tsx
app/lib/types/: auth.ts  handle.ts
app/routes/: _index.tsx  launcher._index.tsx  launcher.settings.tsx  launcher.tsx  messages.$user._index.tsx  messages.tsx  splash-screen.tsx
app/styles/: tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-launcher.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  window_ext.rs
src-tauri/src/commands/: auth.rs  mod.rs  texture.rs  window.rs
src-tauri/src/utils/: mod.rs  tray.rs  window_ext.rs
