[package]
name = "decent_client"
version = "0.1.0"
description = "Minecraft Launcher - Decent Client"
authors = ["liqwtf"]
license = ""
repository = "https://github.com/Decent-Client/launcher"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "decent_client"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.10", features = [] }
tauri-plugin-system-info = "2.0.5"
tauri-plugin-fs = "=2.0.0-rc.2"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.1.3"
