[package]
name = "decent_client_launcher"
version = "0.0.3"
description = "Minecraft Launcher - Decent Client"
authors = ["liqwtf"]
license = ""
repository = "https://github.com/Decent-Client/launcher"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "decent_client"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.10", features = ["macos-private-api"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-system-info = "2.0.5"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-fs = "=2.0.0-rc.2"
tauri-plugin-os = "2.0.0-rc"
windows-version = "0.1.0"
tauri-plugin-decorum = "1.1.0"
minecraft-msa-auth = "0.4.0"
oauth2 = "4.4.2"
image = "0.24"
base64 = "0.21"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.0-rc"



